// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments renders with amountComments 1`] = `
<div>
  <CommentsHeader
    amountComments={1000000}
  />
  <AddComment />
  <Comment />
  <Comment />
  <Comment />
</div>
`;

exports[`Comments renders without props 1`] = `
<div>
  <CommentsHeader />
  <AddComment />
  <Comment />
  <Comment />
  <Comment />
</div>
`;
